Fix leaky game logic and fix scrollbar bug

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -147,6 +147,7 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   margin: 0 2rem;
+  overflow: hidden;
 }
 
 .right-container {
